--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ PORT="" 				# Provide a value for PORT
 BE_PORT="" 				# Provide a value for BE_PORT
 BETTER_AUTH_SECRET="" 				# Provide a value for BETTER_AUTH_SECRET
 BETTER_AUTH_URL="" 				# Provide a value for BETTER_AUTH_URL
+GOOGLE_CLIENT_ID="" 				# Provide a value for GOOGLE_CLIENT_ID
+GOOGLE_CLIENT_SECRET="" 				# Provide a value for GOOGLE_CLIENT_SECRET
