--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,8 @@
         "BETTER_AUTH_URL",
         "GITHUB_CLIENT_ID",
         "GITHUB_CLIENT_SECRET",
+        "GOOGLE_CLIENT_ID",
+        "GOOGLE_CLIENT_SECRET",
         "DATABASE_URL"
       ]
     },
